# RallyRobotPilot_2025

./: .gitignore  README.md  jupyter.ipynb  model_notebook.py  nn.md  notebook.py  pyproject.toml  requirements.txt
docker/: Dockerfile.headless  docker-compose.yaml
rallyrobopilot/: game_launcher.py  remote_controller.py
records/: record_0.npz  record_1.npz  record_10.npz  record_2.npz  record_2t.npz  record_2t_rev.npz  record_3.npz  record_4.npz  record_5.npz  record_6.npz  record_7.npz  record_8.npz
scripts/: autopilot.py  convert_records_to_csv.py  data_collector.py  data_reader.py  torch_autopilot.py
