[project]
name = "rallyrobotpilot-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask==3.0.3",
    "imageio==2.35.1",
    "marimo>=0.16.5",
    "numpy>=2.1.0",
    "psd-tools3==1.8.2",
    "pyqt6==6.7.1",
    "screeninfo==0.8.1",
    "setuptools>=80.9.0",
    "ursina==5.0.0",
    "ursinanetworking==2.1.4",
]
